--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <footer>
     <div class="footer">
         <div class="footer-logo">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="images/logo1.PNG" alt="logo">
             </a>
         </div>
